<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_InicioVendedor"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_Clientes"
            android:icon="@drawable/ic_clientes"
            android:title="@string/clientes" />
        <item
            android:id="@+id/nav_Inventario"
            android:icon="@drawable/ic_inventario"
            android:title="@string/productos" />
        <item
            android:id="@+id/nav_RevisarPedidos"
            android:icon="@drawable/ic_pedidos"
            android:title="@string/revisar_pedidos" />
        <item
            android:id="@+id/nav_CerrarSesion"
            android:icon="@drawable/ic_exit"
            android:title="@string/cerrar_sesion" />
    </group>
</menu>
