<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_registro"
    tools:context="com.example.jacobo.managercounts.RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="190dp"
                android:layout_height="230dp"
                android:layout_gravity="center"
                android:id="@+id/imagenperfil"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                />
            <EditText style="@style/StyleEditTextDatos"
                android:hint="@string/cedula"
                android:inputType="textPersonName"
                android:id="@+id/eRCedula"/>

            <EditText style="@style/StyleEditTextDatos"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:id="@+id/eRNombres"/>
            <EditText style="@style/StyleEditTextDatos"
                android:hint="@string/apellidos"
                android:inputType="textPersonName"
                android:id="@+id/eRApellidos"/>
            <EditText style="@style/StyleEditTextDatos"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:id="@+id/eRTelefono"/>
            <EditText style="@style/StyleEditTextDatos"
                android:hint="@string/direccion"
                android:inputType="textPostalAddress"
                android:id="@+id/eRDireccion"/>
            <EditText style="@style/StyleEditTextDatos"
                android:hint="@string/barrio"
                android:inputType="text"
                android:id="@+id/eRBarrio"/>
            <EditText style="@style/StyleEditTextDatos"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:id="@+id/eRClave1"/>
            <EditText style="@style/StyleEditTextDatos"
                android:hint="@string/Confir.contraseña"
                android:inputType="textPassword"
                android:id="@+id/eRClave2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <Button style="@style/StyleButton"
                    android:text="@string/registrarse"
                    android:onClick="click"
                    android:id="@+id/bRegistrarse"/>

                <Button style="@style/StyleButton"
                    android:text="@string/cancelar"
                    android:onClick="click"
                    android:id="@+id/bCancelar"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
