<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_login"
    tools:context="com.example.jacobo.managercounts.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/manager"
                android:layout_weight="2" />
            <EditText style="@style/StyleEditTextDatos"
                android:hint="@string/usuario"
                android:inputType="textPersonName"
                android:id="@+id/eLUsuario"/>
            <EditText style="@style/StyleEditTextDatos"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:id="@+id/eLClave"/>
            <Button style="@style/StyleButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/InicioSesion"
                android:onClick="Inicio"
                android:id="@+id/bLIniciar"/>

            <com.facebook.login.widget.LoginButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_gravity="center"
                android:id="@+id/bLoginFacebook"/>

            <com.google.android.gms.common.SignInButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_gravity="center"
                android:id="@+id/bLoginGoogle" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/registrarse"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="5dp"
                android:clickable="true"
                android:id="@+id/tLRegistrarse"/>
            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>